commit for stash