@@ -155,7 +155,7 @@ public class MemberService {
 
         // 파일 업로드 처리 로직
         String fileName = file.getOriginalFilename();
-        String fileUploadPath = System.getenv("FILE_UPLOAD_PATH");
+        String fileUploadPath = System.getenv("C://Users//조승아//Desktop//FILE_UPLOAD_PATH/");
         Path filePath = Paths.get(fileUploadPath, fileName);
         Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
 
@@ -181,27 +181,27 @@ public class MemberService {
         }
 
         // 새로운 이미지 파일 업로드
-//        String fileName = file.getOriginalFilename();
-//        Path filePath = Path.of("/Users/seonggeon2/Downloads/mainproject/server/uploads/", fileName);
-//        Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
-//
-//        member.setProfileImage(fileName);
-//        memberRepository.save(member);
-//    }
-        // 새로운 이미지 파일 업로드
         String fileName = file.getOriginalFilename();
-        String fileUploadPath = System.getenv("FILE_UPLOAD_PATH");
-        Path filePath = Paths.get(fileUploadPath, fileName);
+        Path filePath = Path.of("C://Users//조승아//Desktop//FILE_UPLOAD_PATH/", fileName);
         Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
 
         member.setProfileImage(fileName);
         memberRepository.save(member);
     }
+        // 새로운 이미지 파일 업로드
+//        String fileName = file.getOriginalFilename();
+  //      String fileUploadPath = System.getenv("C://Users//조승아//Desktop//FILE_UPLOAD_PATH/");
+    //    Path filePath = Paths.get(fileUploadPath, fileName);
+      //  Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
+
+        //member.setProfileImage(fileName);
+        //memberRepository.save(member);
+    //}
 
         // 기존 이미지 파일 삭제
 //    private void deleteExistingProfileImage(Member member) {
 //        if (member.getProfileImage() != null && !member.getProfileImage().isEmpty()) {
-//            String existingImagePath = "/Users/seonggeon2/Downloads/mainproject/server/uploads/"
+//            String existingImagePath = "C://Users//조승아//Desktop//FILE_UPLOAD_PATH/"
 //                    + member.getProfileImage();
 //            Path existingImageFile = Paths.get(existingImagePath);
 //            if (Files.exists(existingImageFile)) {
@@ -216,7 +216,7 @@ public class MemberService {
         // 기존 이미지 파일 삭제
         private void deleteExistingProfileImage(Member member) {
             if (member.getProfileImage() != null && !member.getProfileImage().isEmpty()) {
-                String existingImagePath = System.getenv("FILE_UPLOAD_PATH") + member.getProfileImage();
+                String existingImagePath = System.getenv("C://Users//조승아//Desktop//FILE_UPLOAD_PATH/") + member.getProfileImage();
                 Path existingImageFile = Paths.get(existingImagePath);
                 if (Files.exists(existingImageFile)) {
                     try {
@@ -229,31 +229,32 @@ public class MemberService {
         }
 
     // 이미지 조회 메서드 추가
-//    public byte[] getProfileImage(long memberId) throws IOException {
-//        Member member = memberRepository.findById(memberId)
-//                .orElseThrow(() -> new IllegalArgumentException("Invalid member ID"));
-//
-//        String fileName = member.getProfileImage();
-//        if (fileName != null && !fileName.isEmpty()) {
-//            Path filePath = Paths.get("/Users/seonggeon2/Downloads/mainproject/server/uploads/", fileName);
-//            if (Files.exists(filePath)) {
-//                return Files.readAllBytes(filePath);
-//            } else {
-//                throw new FileNotFoundException("File does not exist: " + fileName);
-//            }
-//        } else {
-//            throw new IllegalStateException("Profile image file name is missing.");
-//        }
-//    }
-
-    // 이미지 조회 메서드 추가
     public byte[] getProfileImage(long memberId) throws IOException {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new IllegalArgumentException("Invalid member ID"));
 
         String fileName = member.getProfileImage();
         if (fileName != null && !fileName.isEmpty()) {
-            String fileUploadPath = System.getenv("FILE_UPLOAD_PATH");
+            Path filePath = Paths.get("C://Users//조승아//Desktop//FILE_UPLOAD_PATH/", fileName);
+            if (Files.exists(filePath)) {
+                return Files.readAllBytes(filePath);
+            } else {
+                throw new FileNotFoundException("File does not exist: " + fileName);
+            }
+        } else {
+            throw new IllegalStateException("Profile image file name is missing.");
+        }
+    }
+
+    // 이미지 조회 메서드 추가
+    /*
+    public byte[] getProfileImage(long memberId) throws IOException {
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new IllegalArgumentException("Invalid member ID"));
+
+        String fileName = member.getProfileImage();
+        if (fileName != null && !fileName.isEmpty()) {
+            String fileUploadPath = System.getenv("C://Users//조승아//Desktop//FILE_UPLOAD_PATH/");
             Path filePath = Paths.get(fileUploadPath, fileName);
             if (Files.exists(filePath)) {
                 return Files.readAllBytes(filePath);
@@ -264,6 +265,8 @@ public class MemberService {
             throw new IllegalStateException("Profile image file name is missing.");
         }
     }
+
+     */
 
     // 이미지 삭제
 //    public void deleteProfileImage(long memberId) throws IOException {
